# rabbitmq-api-admin

./: .flake8  .travis.yml  CONTRIBUTING.md  LICENSE  README.rst  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
rabbitmq_admin/: __init__.py  api.py  base.py
rabbitmq_admin/tests/: test_api.py  test_base.py
