[tool.poetry]
name = "rabbitmq-api-admin"
version = "0.3.0"
description = "A python interface for the RabbitMQ Admin HTTP API"
authors = ["UMA.TECH <developers@uma.tech>"]
license = "Apache License 2.0"
repository = "https://github.com/Uma-Tech/rabbitmq-api-admin"
exclude = ["rabbitmq_admin/tests"]
packages = [
    { include = "rabbitmq_admin" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
# tests
coverage = "^6.5"
pika = "~1.3.0"

# linting
flake8 = "~5.0.4"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
